# BD2-proyecto1

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md  test.cpp
data/: 1_separate.py  2_get_ids.py  limpieza.py  separator.py
src/: AFile.hpp  AVLFile_Manager.cpp  AVL_File.cpp  Ext_Hash.cpp  Ext_Hash.hpp  File2_manager.hpp  Isam.cpp  Isam.hpp  Table.cpp  Table.hpp  avl_fm.cpp  avl_fm.hpp  consumer_id_data.hpp  csvLoader.cpp  csvLoader.hpp  database.cpp  database.hpp  db_engine.cpp  db_engine.hpp  file_manager.cpp  file_manager.hpp  main.cpp  p1_bueno.cpp  parser.cpp  parser.hxx  register.cpp  register.hpp
ui/: main.cpp
